2004-10-26  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/java/net/URLConnection/post.java:
	New testcase to test for implicit switch to POST method for http
	connections.

2004-10-25  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/text/BreakIterator/patho.java: New file.

2004-10-21  Dalibor Topic  <robilad@kaffe.org>

	* gnu/testlet/java/util/zip/InflaterInputStream/basic.java,
	gnu/testlet/java/util/ResourceBundle/getBundle.java:
	Fixed imports.

2004-10-21  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/util/zip/InflaterInputStream/basic.java (test):
	Added test derived from Eclipse.
	* gnu/testlet/java/util/zip/InflaterInputStream/messages.properties:
	New file.

2004-10-20  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/util/ResourceBundle/getBundle.java
	(loadCheck): New overload.
	(test): Added new test.
	* gnu/testlet/java/util/ResourceBundle/Resource11.properties: New
	file.
	* gnu/testlet/java/util/ResourceBundle/Resource11.java: New file.

2004-10-20  Bryce McKinlay  <mckinlay@redhat.com>

	* gnu/testlet/java/util/Calendar/set.java: Add tests for setting
	DAY_OF_MONTH effecting other fields.

2004-10-20  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/awt/geom/Ellipse2D/Float/clone.java: New test.
	* gnu/testlet/java/awt/geom/Ellipse2D/Float/constructors.java:
	Likewise.
	* gnu/testlet/java/awt/geom/Ellipse2D/Float/getBounds2D.java:
	Likewise.
	* gnu/testlet/java/awt/geom/Ellipse2D/Float/getHeight.java:
	Likewise.
	* gnu/testlet/java/awt/geom/Ellipse2D/Float/getWidth.java:
	Likewise.
	* gnu/testlet/java/awt/geom/Ellipse2D/Float/getX.java: Likewise.
	* gnu/testlet/java/awt/geom/Ellipse2D/Float/getY.java: Likewise.
	* gnu/testlet/java/awt/geom/Ellipse2D/Float/isEmpty.java:
	Likewise.
	* gnu/testlet/java/awt/geom/Ellipse2D/Float/setFrame.java:
	Likewise.
	
2004-10-20  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/awt/geom/Ellipse2D/Double/clone.java: New test.